kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: pipeline
  name: argo-webhook
spec:
  ports:
  - name: webhook
    port: 3000
  selector:
    app: argo-webhook
  type: NodePort
