kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-webhook-ingres
  namespace: pipeline
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
     paths:
      - path: /webhook
        backend:
          serviceName: argo-webhook
          servicePort: webhook
